chat: fix 'align left/right bubble' options

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1347,7 +1347,7 @@
             /// Replies.
             ._2HTIU { c: 0 0 bg }
             /// Feat -> Align left bubble.
-            if ( chat_left == 1 ) { justify-content: flex-end }
+            if ( chat_left == 1 ) { align-items: flex-end }
         }
         /// Right.
         &-out {
@@ -1378,7 +1378,7 @@
             /// Replies.
             ._2HTIU { c: 0 0 bg }
             /// Feat -> Align right bubble.
-            if ( chat_right == 1 ) { justify-content: flex-start }
+            if ( chat_right == 1 ) {  align-items: flex-start }
         }
     }
 
